# pyigdl

./: README.md  pyproject.toml
src/: test.py
src/pyigdl/: __init__.py  igdl.py
